# quart

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: lock.yaml  publish.yaml  tests.yaml
artwork/: LICENSE
compliance/autobahn/: fuzzingclient.json  server.py  summarise.py
compliance/h2spec/: cert.pem  key.pem  server.py
docs/: AsyncProgressBar_tutorial.rst  Makefile  api.rst  asgi_deployments.rst  async_compatibility.rst  asyncio.rst  background_tasks.rst  blog_tutorial.rst  blueprints.rst  broadcast_tutorial.rst  command_line.rst  conf.py  configuration.rst  contexts.rst  deployment.rst  design_choices.rst  dos_mitigations.rst  event_loop.rst  flask_ext_tutorial.rst  flask_extensions.rst  flask_migration.rst  globals.rst  http2.rst  http2_discussion.rst  http2_tutorial.rst  index.rst  installation.rst  large_application.rst  license.md  license.rst  logging.rst  logo.rst  make.bat  middleware.rst  python_versions.rst  quart_extensions.rst  quickstart.rst  request_body.rst  response_values.rst  routing.rst  (+14 more)
docs/_static/css/: quart.css
docs/_templates/: sidebar.html  source.html
docs/discussion/: async_compatibility.rst  background_tasks.rst  contexts.rst  dos_mitigations.rst  flask_evolution.rst  index.rst  python_versions.rst
docs/how_to_guides/: background_tasks.rst  blueprints.rst  command_line.rst  configuration.rst  developing.rst  disconnections.rst  event_loop.rst  flask_extensions.rst  flask_migration.rst  index.rst  json_encoding.rst  logging.rst  middleware.rst  quart_extensions.rst  request_body.rst  routing.rst  server_sent_events.rst  session_storage.rst  startup_shutdown.rst  streaming_response.rst  sync_code.rst  templating.rst  testing.rst  using_http2.rst  websockets.rst
docs/reference/: cheatsheet.rst  index.rst  logo.rst  response_values.rst  versioning.rst
docs/source/: modules.rst  quart.app.rst  quart.asgi.rst  quart.blueprints.rst  quart.cli.rst  quart.config.rst  quart.ctx.rst  quart.datastructures.rst  quart.debug.rst  quart.exceptions.rst  quart.flask_patch.app.rst  quart.flask_patch.globals.rst  quart.flask_patch.rst  quart.globals.rst  quart.helpers.rst  quart.json.rst  quart.json.tag.rst  quart.local.rst  quart.logging.rst  quart.routing.rst  quart.rst  quart.serving.rst  quart.sessions.rst  quart.signals.rst  quart.static.rst  quart.templating.rst  quart.testing.rst  quart.typing.rst  quart.utils.rst  quart.views.rst  quart.worker.rst  quart.wrappers.request.rst  quart.wrappers.response.rst  quart.wrappers.rst
docs/tutorials/: AsyncProgressBar_tutorial.rst  api_tutorial.rst  asyncio.rst  blog_tutorial.rst  broadcast_tutorial.rst  chat_tutorial.rst  deployment.rst  developing.rst  flask_ext_tutorial.rst  index.rst  installation.rst  quickstart.rst  video_tutorial.rst  websocket_tutorial.rst
examples/ApplicationFactory/: Readme.md
examples/ApplicationFactory/app/: __init__.py  config.py
examples/AsyncProgressBar/: progress_bar.py
examples/api/: README.rst  pyproject.toml
examples/api/src/api/: __init__.py
examples/api/tests/: test_api.py
examples/blog/: README.rst  blog.db  blog.py  pyproject.toml  test_blog.py
examples/blog/blog/: blog.py  schema.sql
examples/blog/static/: blog.css
examples/broadcast/: README.rst  broadcast.py
examples/calculator/: README.rst  calculator.py
examples/chat/: README.rst  pyproject.toml
examples/chat/src/chat/: __init__.py  broker.py
examples/chat/src/chat/templates/: index.html
examples/chat/tests/: test_chat.py
examples/flask_ext/: flask_ext.py
examples/http2/: http2.py
examples/http2_push/: README.rst  http2_push.py  requirements.txt
examples/login/: login.py
examples/sse/: sse.py
examples/todo_app/: requirements.txt
examples/video/: .gitignore  README.rst  pyproject.toml  video.py
examples/websocket/: README.rst  websocket.py
quart/: __init__.py  app.py  asgi.py  blueprints.py  cli.py  config.py  ctx.py  datastructures.py  debug.py  exceptions.py  flask_ext.py  globals.py  helpers.py  json.py  local.py  logging.py  routing.py  serving.py  sessions.py  signals.py  static.py  templating.py  testing.py  typing.py  utils.py  views.py  worker.py  wrappers.py
quart/flask_ext/: __init__.py  globals.py  templating.py
quart/flask_patch/: __init__.py  _patch.py  _synchronise.py  app.py  globals.py  helpers.py
quart/json/: __init__.py  tag.py
quart/serving/: __init__.py  _base.py  asgi.py  h11.py  h2.py  websocket.py
quart/wrappers/: __init__.py  _base.py  request.py  response.py
requirements/: build.txt  dev.in  dev.txt  docs.in  docs.txt  tests.in  tests.txt  typing.in  typing.txt
src/quart/: __about__.py  __init__.py  __main__.py  app.py  asgi.py  blueprints.py  cli.py  config.py  ctx.py  datastructures.py  debug.py  exceptions.py  formparser.py  globals.py  helpers.py  local.py  logging.py  routing.py  scaffold.py  sessions.py  signals.py  static.py  templating.py  testing.py  typing.py  utils.py  views.py
src/quart/json/: tag.py  (+2 more)
tests/: conftest.py  test_app.py  test_asgi.py  test_background_tasks.py  test_basic.py  test_blueprints.py  test_cli.py  test_config.py  test_ctx.py  test_datastructures.py  test_debug.py  test_environ.py  test_exceptions.py  test_flask_ext.py  test_flask_patch.py  test_formparser.py  test_helpers.py  test_json.py  test_local.py  test_logging.py  test_routing.py  test_serving.py  test_sessions.py  test_signals.py  test_static.py  test_static_hosting.py  test_sync.py  test_templating.py  test_testing.py  test_utils.py  test_views.py  test_wrappers.py
tests/assets/: config.cfg  config.json  config.py  config.toml
tests/serving/: helpers.py  test_base.py  test_h11.py  test_h2.py  test_init.py  test_upgrade.py  test_websocket.py
tests/wrappers/: test_base.py  test_request.py  test_response.py
(+57 files in other folders)
