[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["pgjones <philip.graham.jones@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quart = "*"
quart-schema = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "^0.18.3"

[tool.poetry.scripts]
start = "api:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
